# sambag

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  FindBoostX.cmake  FindCairo.cmake  FindCairo.cmake~  FindCppUnitX.cmake  FindIConvX.cmake  FindLibPngX.cmake  FindLibPngX.cmake~  FindLokiX.cmake  FindLua52X.cmake  FindPixmanX.cmake  FindPixmanX.cmake~  FindSambag.cmake  FindSqlite3X.cmake  FindTinyXMLX.cmake  FindVST3X.cmake  FindZlibX.cmake  FindZlibX.cmake~  README.md  build.sh  cmake_install.cmake  htmlOut.css  makelib.sh  path.txt  regexHelper.txt  svg2png.py  svgTestSuite.html  vcpkg.json
src/: .gitignore  CMakeLists.txt  cmake_install.cmake  sambag.vcproj  testApp.vcproj  unit_tests.vcproj
src/sambag/: CMakeLists.txt
src/sambag/com/: AbstractType.hpp  ArbitraryType.hpp  ArithmeticWrapper.hpp  BoostTimer.cpp  BoostTimer.hpp  BoostTimer2.cpp  BoostTimer2.hpp  BoostTimerImpl.hpp  BoostTimerImpl2.cpp  BoostTimerImpl2.hpp  CMakeLists.txt  Common.cpp  Common.hpp  Config.h  Config.h.in  Exception.cpp  Exception.hpp  FileHandler.cpp  FileHandler.hpp  FileSystem.cpp  FileSystem.hpp  Filesystem.hpp  GenericFormatter.hpp~  GenericTimer.cpp  GenericTimer.hpp  Helper.hpp  ICommand.hpp  IDataHandler.hpp  ITimer.cpp  ITimer.hpp  Interprocess.cpp  Interprocess.hpp  One2One.cpp  One2One.hpp  PlacementAlloc.hpp  SharedMemory.hpp  SharedMemoryImpl.hpp  SharedOrWeak.hpp  Thread.hpp  UnitEx.cpp  (+3 more)
src/sambag/com/events/: ChangedEvent.hpp  Events.hpp  PropertyChanged.hpp
src/sambag/com/exceptions/: IllegalArgumentException.hpp  IllegalStateException.hpp
src/sambag/com/tests/: CMakeLists.txt  FileSystemTest.cpp  FileSystemTest.hpp  TestArithmeticWrapper.cpp  TestArithmeticWrapper.hpp  TestBoostTimer2.cpp  TestBoostTimer2.hpp  TestHelper.cpp  TestHelper.hpp  TestInterprocess.cpp  TestInterprocess.hpp  TestOne2One.cpp  TestOne2One.hpp  TestPropertyChanged.cpp  TestPropertyChanged.hpp  TestSharedOrWeak.cpp  TestSharedOrWeak.hpp  TestThread.cpp  TestThread.hpp  test_shm_counterpart.cpp
src/sambag/cpsqlite/: CMakeLists.txt  DataBase.cpp  DataBase.hpp  Parameter.hpp  sambag_sqlite.c
src/sambag/cpsqlite/tests/: CMakeLists.txt  DBTest.cpp  DBTest.hpp
src/sambag/disco/: ADiscoFactory.cpp  ADiscoFactory.hpp  AFramedWindow.cpp  AFramedWindow.hpp  AWindow.cpp  AWindow.hpp  CMakeLists.txt  CairoDataHandler.cpp  CairoDataHandler.hpp  CairoDiscoFactory.cpp  CairoDiscoFactory.hpp  CairoDrawContext.cpp  CairoDrawContext.hpp  CairoHelper.hpp  CairoPattern.cpp  CairoPattern.hpp  CairoSurface.cpp  CairoSurface.hpp  ColorRGBA.cpp  ColorRGBA.hpp  Coordinate.cpp  Coordinate.hpp  Coordinate.hpp~  CreateAppropriateCairoSurface.cpp  CreateAppropriateCairoSurface.hpp  Dash.hpp  DiscoHelper.cpp  DiscoHelper.hpp  FileResourceManager.cpp  FileResourceManager.hpp  Font.hpp  FontCache.cpp  FontCache.hpp  Forward.hpp  FramedWindow.cpp  FramedWindow.hpp  GenericAnimator.cpp  GenericAnimator.hpp  Geometry.cpp  Geometry.hpp  (+39 more)
src/sambag/disco/components/: AButton.cpp  AButton.hpp  AColumnBrowser.cpp  AColumnBrowser.hpp  AComponent.cpp  AComponent.hpp  AComponent.hpp.orig  AContainer.cpp  AContainer.hpp  AKnob.cpp  AKnob.hpp  ALayoutManager.cpp  ALayoutManager.hpp  AList.cpp  AList.hpp  APopupMenu.hpp  AScrollbar.hpp  ActionMap.cpp  ActionMap.hpp  Animation.cpp  Animation.hpp  BorderLayout.cpp  BorderLayout.hpp  BoxLayout.cpp  BoxLayout.hpp  Button.cpp  Button.hpp  ButtonGroup.cpp  ButtonGroup.hpp  CMakeLists.txt  CellRendererPane.cpp  CellRendererPane.hpp  CheckBox.cpp  CheckBox.hpp  ColumnBrowser.cpp  ColumnBrowser.hpp  ColumnView.cpp  ColumnView.hpp  ComponentWrapper.hpp  DefaultBoundedRangeModel.cpp  (+88 more)
src/sambag/disco/genFormatter/: DiscoComponentAccess.hpp  GenFlowLayout.hpp  GenericFormatter.hpp  RectangleAccess.hpp
src/sambag/disco/graphicElements/: Arc.cpp  Arc.hpp  Compound.cpp  Compound.hpp  GraphicElement.cpp  GraphicElement.hpp  IGraphicObject.hpp  Image.cpp  Image.hpp  Line.cpp  Line.hpp  Path.cpp  Path.hpp  PathHelper.cpp  PointContainer.cpp  PointContainer.hpp  Rect.cpp  Rect.hpp  RefElement.cpp  RefElement.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneGraphHelper.cpp  SceneGraphHelper.hpp  Style.cpp  Style.hpp  Text.cpp  Text.hpp
src/sambag/disco/svg/: AttributeParser.cpp  AttributeParser.hpp  CMakeLists.txt  DomIterator.cpp  DomIterator.hpp  DomObject.cpp  DomObject.hpp  HtmlColors.cpp  HtmlColors.hpp  Image.cpp  Image.hpp  PathInstructions.cpp  Style.cpp  Style.hpp  StyleAttributeSetters.cpp  StyleParser.cpp  StyleParser.hpp  Svg.cpp  Svg.hpp  SvgBuilder.cpp  SvgBuilder.hpp  SvgCircle.cpp  SvgCircle.hpp  SvgColorStop.hpp  SvgCompound.cpp  SvgCompound.hpp  SvgDefs.cpp  SvgDefs.hpp  SvgEllipse.cpp  SvgEllipse.hpp  SvgGroup.cpp  SvgGroup.hpp  SvgImage.hpp  SvgLine.cpp  SvgLine.hpp  SvgLinearGradient.cpp  SvgLinearGradient.hpp  SvgPath.cpp  (+18 more)
src/sambag/dsp/: DefaultMidiEvents.cpp  DefaultMidiEvents.hpp  DspPlugin.hpp  HostTimeInfo.cpp  HostTimeInfo.hpp  IEditor.hpp  IMidiEvents.cpp  IMidiEvents.hpp  MidiEventAdapter.hpp  MidiEventConverter.cpp  MidiEventConverter.hpp  TimeInfoVst2xHelper.cpp  TimeInfoVst2xHelper.hpp  TimeInfoVst3xHelper.cpp  TimeInfoVst3xHelper.hpp  VST2xPluginWrapper.hpp  Vst3MidiEvents.cpp  Vst3MidiEvents.hpp  VstMidiEventAdapter.cpp  VstMidiEventAdapter.hpp
src/sambag/lua/: ALuaObject.cpp  ALuaObject.hpp  ILuaTable.hpp  Lua.hpp  LuaHelper.hpp  LuaHelper.hpp.orig  LuaMap.hpp  LuaRegisterFunction.hpp  LuaScript.cpp  LuaScript.hpp  LuaSequence.hpp  LuaTable.hpp
src/sambag/math/: CMakeLists.txt  CantorOrder.cpp  CantorOrder.hpp  Matrix.cpp  Matrix.hpp  VectorN.hpp  VectorNCreator.hpp
src/sambag/xml/: CMakeLists.txt  DomIterator.cpp  DomIterator.hpp  DomObject.cpp  DomObject.hpp  XML2Obj.hpp
src/testApps/: sambag_tests.cpp
src/win32_resources/: resource.h  resources.rc
testApps/: CMakeLists.txt  TestList.h  sambag_com_tests.hpp  sambag_tests.cpp
testApps/componentTests/TestButtons/: .cproject
testApps/componentTests/TestRootPane/: .project
testApps/gcc/: makefile
testApps/msVS2008/: sambag_tests.sln
testApps/msVS2008/sambag_tests/: sambag_tests.vcproj
(+877 files in other folders)
