SET (sambag_disco_components_tests
	TestConcreteComponents.cpp
	TestBoostTimerImpl.cpp
	TestComponents.cpp
	TestRootPane.cpp
	TestAContainer.cpp
	TestFlowLayout.cpp
	TestLookAndFeel.cpp
	TestWindow.cpp
	TestMouseEvent.cpp
	TestList.cpp
	TestPopupMenu.cpp
	TestUIManager.cpp
	TestAComponent.cpp
)
add_library(sambag_disco_components_tests ${sambag_disco_components_tests})
