SET (sambag_disco_components_windowImpl
	Win32WindowImpl.cpp
	X11WindowImpl.cpp
	Win32WindowToolkit.cpp
	Win32MMTimerImpl.cpp
	TestWindowImpl.cpp
	BoostTimerImpl.cpp
	X11WindowToolkit.cpp
	Win32TimerImpl.cpp
	WindowTestToolkit.cpp
)
add_library(sambag_disco_components_windowImpl ${sambag_disco_components_windowImpl})
