SET (sambag_disco_svg_graphicElements
	Compound.cpp
	Line.cpp
	PathHelper.cpp
	GraphicElement.cpp
	Image.cpp
	Text.cpp
	RefElement.cpp
	SceneGraphHelper.cpp
	SceneGraph.cpp
	PointContainer.cpp
	Path.cpp
	Arc.cpp
	Style.cpp
	Rect.cpp
)
add_library(sambag_disco_svg_graphicElements ${sambag_disco_svg_graphicElements})
